--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@ addopts =
     -x
     -v
     --cov=webcheck
-#    --cov-report html:htmlcov
+    --cov-report html:htmlcov
 testpaths = tests
 
 [flake8]
-exclude = build
+exclude = build,.venv
